// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packer Lerna core functions should generate a hash for the packed bundle 1`] = `"c47f8432f2003d16eaa5afe09720adf81ef7b7b45388e687e7f480c20829cf99"`;

exports[`Packer Lerna core functions should generate a valid registry file 1`] = `
"[
  \\"./.monopacker/fixture-sub-0.1.3.tgz\\",
  \\"./.monopacker/fixture-subsub-0.1.3.tgz\\",
  \\"./.monopacker/fixture-subsubsub-0.1.3.tgz\\"
]"
`;

exports[`Packer Lerna core functions should generate an artificial package correctly 1`] = `
Object {
  "dependencies": Object {
    "ansi-styles": "4.0.0",
    "debug": "*",
    "smallest": "1.0.1",
    "supports-color": "7.0.0",
  },
  "description": "",
  "monopacker": Object {
    "hash": "c47f8432f2003d16eaa5afe09720adf81ef7b7b45388e687e7f480c20829cf99",
    "linked": Object {
      "@fixture/sub": "0.1.3",
      "@fixture/subsub": "0.1.3",
      "@fixture/subsubsub": "0.1.3",
    },
    "version": "1",
  },
  "name": "@fixture/main-packed",
  "scripts": Object {
    "postinstall": "npm i --ignore-scripts ./.monopacker/fixture-sub-0.1.3.tgz ./.monopacker/fixture-subsub-0.1.3.tgz ./.monopacker/fixture-subsubsub-0.1.3.tgz",
  },
  "version": "0.2.7",
}
`;

exports[`Packer Lerna core functions should generate correct metadata for the packed bundle 1`] = `
Object {
  "hash": "c47f8432f2003d16eaa5afe09720adf81ef7b7b45388e687e7f480c20829cf99",
  "linked": Object {
    "@fixture/sub": "0.1.3",
    "@fixture/subsub": "0.1.3",
    "@fixture/subsubsub": "0.1.3",
  },
  "version": "1",
}
`;
